# DocMason

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  docmason.yaml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.githooks/: README.md  pre-commit  pre-push
.github/: copilot-instructions.md
docs/: README.md
sample_corpus/: README.md
scripts/: bootstrap-workspace.sh  build-distributions.py  check-repo-safety.py  install-git-hooks.sh  read-host-execution-context.py  release-version.py  update-docmason-core.py  update-download-badge.py  use-sample-corpus.py
tests/: __init__.py  support_ask_core.py  support_ask_hardening.py  support_claude_code_adapter_and_hooks.py  support_evaluation_runtime.py  support_interaction_ingest_and_review.py  support_operator_eval_runtime.py  support_public_corpus.py  support_ready_workspace.py  support_reference_resolution.py  support_retrieval_trace_core.py  support_source_build_email.py  support_source_build_office_pdf.py  support_source_build_text.py  support_workspace_bootstrap_and_status.py  test_ask_and_composition.py  test_claude_code_adapter_and_hooks.py  test_distribution_and_privacy.py  test_foundation_and_contracts.py  test_interaction_ingest_and_review.py  test_operator_eval_runtime.py  test_phase_6b2_runtime.py  test_phase_6b3_email_runtime.py  test_phase_6b3_text_runtime.py  test_phase_6b4_claude_code_runtime.py  test_phase_five_runtime.py  test_phase_four_runtime.py  test_phase_six_b1_operator_eval_runtime.py  test_phase_six_follow_on_runtime.py  test_phase_six_hardening_runtime.py  test_phase_six_runtime.py  test_phase_three_runtime.py  test_phase_two_runtime.py  test_public_corpus_sync_and_materialization.py  test_release_entry_client.py  test_release_entry_worker_contract.py  (+6 more)
(+119 files in other folders)
